--- a/doc/source/ray-air/examples/rl_serving_example.ipynb
+++ b/doc/source/ray-air/examples/rl_serving_example.ipynb
@@ -55,7 +55,7 @@
     "from ray.train.rl.rl_trainer import RLTrainer\n",
     "from ray.train.rl.rl_predictor import RLPredictor\n",
     "from ray.air.result import Result\n",
-    "from ray.serve.air_integrations import PredictorDeployment\n",
+    "from ray.serve import PredictorDeployment\n",
     "from ray import serve\n",
     "from ray.tune.tuner import Tuner"
    ]
