--- a/doc/source/ray-air/examples/serving_guide.ipynb
+++ b/doc/source/ray-air/examples/serving_guide.ipynb
@@ -6,18 +6,18 @@
    "source": [
     "(air-serving-guide)=\n",
     "\n",
-    "# Serve Ray AIR Predictors with `Predictor`\n",
+    "# Serve Ray AIR Predictors with `PredictorDeployment`\n",
     "\n",
     "[Ray Serve](rayserve) is the recommended tool to deploy models trained with AIR.\n",
     "\n",
-    "After training a model with Ray Train, you can serve a model using Ray Serve. In this guide, we will cover how to use Ray AIR's `Predictor`, `Predictor`, and `Checkpoint` abstractions to quickly deploy a model for online inference.\n",
+    "After training a model with Ray Train, you can serve a model using Ray Serve. In this guide, we will cover how to use Ray AIR's `PredictorDeployment`, `Predictor`, and `Checkpoint` abstractions to quickly deploy a model for online inference.\n",
     "\n",
     "But before that, let's review the key concepts:\n",
     "- [`Checkpoint`](ray.air.checkpoint) represents a trained model stored in memory, file, or remote uri.\n",
     "- [`Predictor`](ray.train.predictor.Predictor)s understand how to perform a model inference given checkpoints and the model definition. Ray AIR comes with predictors for each supported frameworks. \n",
     "- [`Deployment`](serve-key-concepts-deployment) is a Ray Serve construct that represent an HTTP endpoint along with scalable pool of models.\n",
     "\n",
-    "The core concept for deployment is the `Predictor`. The `Predictor` takes a [predictor](ray.train.predictor.Predictor) class and a [checkpoint](ray.air.checkpoint) and transforms them into a live HTTP endpoint. \n",
+    "The core concept for deployment is the `PredictorDeployment`. The `PredictorDeployment` takes a [predictor](ray.train.predictor.Predictor) class and a [checkpoint](ray.air.checkpoint) and transforms them into a live HTTP endpoint. \n",
     "\n",
     "We'll start with a simple quick-start demo showing how you can use the Predictor to deploy your model for online inference."
    ]
@@ -225,7 +225,7 @@
    "source": [
     "from ray.train.xgboost import XGBoostPredictor\n",
     "from ray import serve\n",
-    "from ray.serve.air_integrations import PredictorDeployment\n",
+    "from ray.serve import PredictorDeployment\n",
     "from ray.serve.http_adapters import pandas_read_json\n",
     "\n",
     "\n",
@@ -282,9 +282,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "It works! As you can see, you can use the `Predictor` to deploy checkpoints trained in Ray AIR as live endpoints. You can find more end-to-end examples for your specific frameworks in the [examples](air-examples-ref) page.\n",
+    "It works! As you can see, you can use the `PredictorDeployment` to deploy checkpoints trained in Ray AIR as live endpoints. You can find more end-to-end examples for your specific frameworks in the [examples](air-examples-ref) page.\n",
     "\n",
-    "This tutorial aims to provide an in-depth understanding of `Predictors`. In particular, it'll demonstrate:\n",
+    "This tutorial aims to provide an in-depth understanding of `PredictorDeployment`. In particular, it'll demonstrate:\n",
     "- How to serve a predictor accepting array input.\n",
     "- How to serve a predictor accepting dataframe input.\n",
     "- How to serve a predictor accepting custom input that can be transformed to array or dataframe.\n",
@@ -378,7 +378,7 @@
    ],
    "source": [
     "from ray import serve\n",
-    "from ray.serve.air_integrations import PredictorDeployment\n",
+    "from ray.serve import PredictorDeployment\n",
     "\n",
     "# Launch a Ray cluster running Ray Serve\n",
     "serve.start()\n",
@@ -653,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. `Predictor` performs microbatching to improve performance\n",
+    "## 4. `PredictorDeployment` performs microbatching to improve performance\n",
     "\n",
     "Common machine learning models take a batch of inputs for prediction. Common ML Frameworks are optimized with vectorized instruction to make inference on batch requests almost as fast as single requests. \n",
     "\n",
