--- a/doc/source/ray-air/examples/tfx_tabular_train_to_serve.ipynb
+++ b/doc/source/ray-air/examples/tfx_tabular_train_to_serve.ipynb
@@ -822,7 +822,7 @@
     "from ray import serve\n",
     "from ray.air.checkpoint import Checkpoint\n",
     "from ray.train.tensorflow import TensorflowPredictor\n",
-    "from ray.serve.air_integrations import PredictorDeployment\n",
+    "from ray.serve import PredictorDeployment\n",
     "\n",
     "\n",
     "def serve_model(checkpoint: Checkpoint, model_definition, adapter, name=\"Model\") -> str:\n",
