--- a/doc/source/ray-air/examples/torch_image_example.ipynb
+++ b/doc/source/ray-air/examples/torch_image_example.ipynb
@@ -606,7 +606,7 @@
    ],
    "source": [
     "from ray import serve\n",
-    "from ray.serve.air_integrations import PredictorDeployment\n",
+    "from ray.serve import PredictorDeployment\n",
     "\n",
     "serve.start(detached=True)\n",
     "deployment = PredictorDeployment.options(name=\"my-deployment\")\n",
