--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -1239,7 +1239,7 @@
     "from ray.train.torch import TorchPredictor\n",
     "from ray.air import Checkpoint\n",
     "from ray import serve\n",
-    "from ray.serve.air_integrations import PredictorDeployment\n",
+    "from ray.serve import PredictorDeployment\n",
     "from ray.serve.http_adapters import json_to_ndarray\n",
     "\n",
     "# The number of tasks (i.e. datasets in our stream) that we want to use for this example.\n",
