[air] use session.report.

--- a/doc/source/tune/examples/tune-mlflow.ipynb
+++ b/doc/source/tune/examples/tune-mlflow.ipynb
@@ -62,6 +62,7 @@
     "import mlflow\n",
     "\n",
     "from ray import tune\n",
+    "from ray.air import session\n",
     "from ray.tune.integration.mlflow import MLflowLoggerCallback, mlflow_mixin"
    ]
   },
@@ -94,7 +95,7 @@
     "        # Iterative training function - can be any arbitrary training procedure\n",
     "        intermediate_score = evaluation_fn(step, width, height)\n",
     "        # Feed the score back to Tune.\n",
-    "        tune.report(iterations=step, mean_loss=intermediate_score)\n",
+    "        session.report({\"iterations\": step, \"mean_loss\": intermediate_score})\n",
     "        time.sleep(0.1)"
    ],
    "metadata": {
@@ -175,7 +176,7 @@
     "        # Log the metrics to mlflow\n",
     "        mlflow.log_metrics(dict(mean_loss=intermediate_score), step=step)\n",
     "        # Feed the score back to Tune.\n",
-    "        tune.report(iterations=step, mean_loss=intermediate_score)\n",
+    "        session.report({\"iterations\": step, \"mean_loss\": intermediate_score})\n",
     "        time.sleep(0.1)"
    ],
    "metadata": {
