--- a/doc/source/tune/examples/tune-wandb.ipynb
+++ b/doc/source/tune/examples/tune-wandb.ipynb
@@ -54,6 +54,7 @@
     "import wandb\n",
     "\n",
     "from ray import tune\n",
+    "from ray.air import session\n",
     "from ray.tune import Trainable\n",
     "from ray.tune.integration.wandb import (\n",
     "    WandbLoggerCallback,\n",
@@ -81,7 +82,7 @@
     "def objective(config, checkpoint_dir=None):\n",
     "    for i in range(30):\n",
     "        loss = config[\"mean\"] + config[\"sd\"] * np.random.randn()\n",
-    "        tune.report(loss=loss)"
+    "        session.report({\"loss\": loss})"
    ],
    "metadata": {
     "collapsed": false,
@@ -148,7 +149,7 @@
     "def decorated_objective(config, checkpoint_dir=None):\n",
     "    for i in range(30):\n",
     "        loss = config[\"mean\"] + config[\"sd\"] * np.random.randn()\n",
-    "        tune.report(loss=loss)\n",
+    "        session.report({\"loss\": loss})\n",
     "        wandb.log(dict(loss=loss))"
    ],
    "metadata": {
