--- a/doc/source/tune/examples/nevergrad_example.ipynb
+++ b/doc/source/tune/examples/nevergrad_example.ipynb
@@ -146,7 +146,7 @@
     "algo = NevergradSearch(\n",
     "    optimizer=ng.optimizers.OnePlusOne,\n",
     ")\n",
-    "algo = tune.suggest.ConcurrencyLimiter(algo, max_concurrent=4)"
+    "algo = tune.search.ConcurrencyLimiter(algo, max_concurrent=4)"
    ]
   },
   {
@@ -290,7 +290,7 @@
     "    metric=\"mean_loss\",\n",
     "    mode=\"min\"\n",
     ")\n",
-    "algo = tune.suggest.ConcurrencyLimiter(algo, max_concurrent=4)"
+    "algo = tune.search.ConcurrencyLimiter(algo, max_concurrent=4)"
    ]
   },
   {
