--- a/doc/source/tune/examples/ax_example.ipynb
+++ b/doc/source/tune/examples/ax_example.ipynb
@@ -207,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "algo = tune.suggest.ConcurrencyLimiter(algo, max_concurrent=4)"
+    "algo = tune.search.ConcurrencyLimiter(algo, max_concurrent=4)"
    ]
   },
   {
