--- a/doc/source/tune/examples/bohb_example.ipynb
+++ b/doc/source/tune/examples/bohb_example.ipynb
@@ -180,7 +180,7 @@
    "outputs": [],
    "source": [
     "algo = TuneBOHB()\n",
-    "algo = tune.suggest.ConcurrencyLimiter(algo, max_concurrent=4)\n",
+    "algo = tune.search.ConcurrencyLimiter(algo, max_concurrent=4)\n",
     "scheduler = HyperBandForBOHB(\n",
     "    time_attr=\"training_iteration\",\n",
     "    max_t=100,\n",
@@ -318,7 +318,7 @@
     "    metric=\"episode_reward_mean\",\n",
     "    mode=\"max\",\n",
     ")\n",
-    "algo = tune.suggest.ConcurrencyLimiter(algo, max_concurrent=4)\n",
+    "algo = tune.search.ConcurrencyLimiter(algo, max_concurrent=4)\n",
     "scheduler = HyperBandForBOHB(\n",
     "    time_attr=\"training_iteration\",\n",
     "    max_t=100,\n",
