Apply suggestions from code review
Co-authored-by: shrekris-anyscale <92341594+shrekris-anyscale@users.noreply.github.com>

--- a/doc/source/ray-air/examples/serving_guide.ipynb
+++ b/doc/source/ray-air/examples/serving_guide.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "The core concept for deployment is the `PredictorDeployment`. The `PredictorDeployment` takes a [predictor](ray.train.predictor.Predictor) class and a [checkpoint](ray.air.checkpoint) and transforms them into a live HTTP endpoint. \n",
     "\n",
-    "We'll start with a simple quick-start demo showing how you can use the Predictor to deploy your model for online inference."
+    "We'll start with a simple quick-start demo showing how you can use the `PredictorDeployment` to deploy your model for online inference."
    ]
   },
   {
@@ -284,7 +284,7 @@
     "\n",
     "It works! As you can see, you can use the `PredictorDeployment` to deploy checkpoints trained in Ray AIR as live endpoints. You can find more end-to-end examples for your specific frameworks in the [examples](air-examples-ref) page.\n",
     "\n",
-    "This tutorial aims to provide an in-depth understanding of `PredictorDeployment`. In particular, it'll demonstrate:\n",
+    "This tutorial aims to provide an in-depth understanding of `PredictorDeployments`. In particular, it'll demonstrate:\n",
     "- How to serve a predictor accepting array input.\n",
     "- How to serve a predictor accepting dataframe input.\n",
     "- How to serve a predictor accepting custom input that can be transformed to array or dataframe.\n",
