--- a/doc/source/ray-air/examples/serving_guide.ipynb
+++ b/doc/source/ray-air/examples/serving_guide.ipynb
@@ -17,7 +17,7 @@
     "- [`Predictor`](ray.train.predictor.Predictor)s understand how to perform a model inference given checkpoints and the model definition. Ray AIR comes with predictors for each supported frameworks. \n",
     "- [`Deployment`](serve-key-concepts-deployment) is a Ray Serve construct that represent an HTTP endpoint along with scalable pool of models.\n",
     "\n",
-    "The core concept for deployment is the `PredictorDeployment`. The `PredictorDeployment` takes a [predictor](ray.train.predictor.Predictor) class and a [checkpoint](ray.air.checkpoint) and transforms them into a live HTTP endpoint. \n",
+    "The core concept for model deployment is the `PredictorDeployment`. The `PredictorDeployment` takes a [predictor](ray.train.predictor.Predictor) class and a [checkpoint](ray.air.checkpoint) and transforms them into a live HTTP endpoint. \n",
     "\n",
     "We'll start with a simple quick-start demo showing how you can use the `PredictorDeployment` to deploy your model for online inference."
    ]
