[AIR] Move integration logging callbacks to AIR

--- a/doc/source/ray-air/examples/upload_to_comet_ml.ipynb
+++ b/doc/source/ray-air/examples/upload_to_comet_ml.ipynb
@@ -49,7 +49,7 @@
     "from ray.air import RunConfig\n",
     "from ray.air.result import Result\n",
     "from ray.train.xgboost import XGBoostTrainer\n",
-    "from ray.tune.integration.comet import CometLoggerCallback"
+    "from ray.air.callbacks.comet import CometLoggerCallback"
    ]
   },
   {
