--- a/doc/source/ray-air/examples/huggingface_text_classification.ipynb
+++ b/doc/source/ray-air/examples/huggingface_text_classification.ipynb
@@ -799,7 +799,7 @@
       "source": [
         "from ray.train.huggingface import HuggingFaceTrainer\n",
         "from ray.air import RunConfig\n",
-        "from ray.tune.integration.mlflow import MLflowLoggerCallback\n",
+        "from ray.air.callbacks.mlflow import MLflowLoggerCallback\n",
         "\n",
         "trainer = HuggingFaceTrainer(\n",
         "    trainer_init_per_worker=trainer_init_per_worker,\n",
