--- a/doc/source/ray-air/examples/upload_to_wandb.ipynb
+++ b/doc/source/ray-air/examples/upload_to_wandb.ipynb
@@ -49,7 +49,7 @@
     "from ray.air import RunConfig\n",
     "from ray.air.result import Result\n",
     "from ray.train.xgboost import XGBoostTrainer\n",
-    "from ray.tune.integration.wandb import WandbLoggerCallback"
+    "from ray.air.callbacks.wandb import WandbLoggerCallback"
    ]
   },
   {
