--- a/doc/source/ray-air/examples/tfx_tabular_train_to_serve.ipynb
+++ b/doc/source/ray-air/examples/tfx_tabular_train_to_serve.ipynb
@@ -776,7 +776,7 @@
    "source": [
     "We will use Ray Serve to serve the trained model. A core concept of Ray Serve is [Deployment](https://docs.ray.io/en/latest/serve/core-apis.html). It allows you to define and update your business logic or models that will handle incoming requests as well as how this is exposed over HTTP or in Python.\n",
     "\n",
-    "In the case of serving model, `ray.serve.model_wrappers.ModelWrapper` and `ray.serve.model_wrappers.ModelWrapperDeployment` wrap a `ray.air.checkpoint.Checkpoint` into a Ray Serve deployment that can readily serve HTTP requests.\n",
+    "In the case of serving model, `ray.serve.air_integrations.Predictor` and `ray.serve.air_integrations.PredictorDeployment` wrap a `ray.air.checkpoint.Checkpoint` into a Ray Serve deployment that can readily serve HTTP requests.\n",
     "Note, ``Checkpoint`` captures both model and preprocessing steps in a way compatible with Ray Serve and ensures that ml workload can transition seamlessly between training and\n",
     "serving.\n",
     "\n",
@@ -822,7 +822,7 @@
     "from ray import serve\n",
     "from ray.air.checkpoint import Checkpoint\n",
     "from ray.train.tensorflow import TensorflowPredictor\n",
-    "from ray.serve.model_wrappers import ModelWrapperDeployment\n",
+    "from ray.serve import PredictorDeployment\n",
     "\n",
     "\n",
     "def serve_model(checkpoint: Checkpoint, model_definition, adapter, name=\"Model\") -> str:\n",
@@ -832,7 +832,7 @@
     "        serve URL.\n",
     "    \"\"\"\n",
     "    serve.start(detached=True)\n",
-    "    deployment = ModelWrapperDeployment.options(name=name)\n",
+    "    deployment = PredictorDeployment.options(name=name)\n",
     "    deployment.deploy(\n",
     "        TensorflowPredictor,\n",
     "        checkpoint,\n",
