--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9c93fcdf",
+   "id": "7190dbb3",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,12 +22,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7854811",
+   "id": "90cae65b",
    "metadata": {},
    "source": [
-    "# Extracting Information from Documents using Ray Datasets\n",
+    "# Scaling up OCR using Ray Datasets\n",
     "\n",
-    "In this example, we will show you how to run optical character recognition (OCR) on a set of documents and analyze the resulting text with the natural language processing library spaCy. To make it more interesting, we will run the analysis on the [LightShot](https://www.kaggle.com/datasets/datasnaek/lightshot) dataset. It is a large publicly available OCR dataset with a wide variety of different documents, all of them screen shots of various forms. It is easy to replace that dataset with your own data and adapt the example to your own use cases!\n",
+    "In this example, we will show you how to run optical character recognition (OCR) on a set of documents and analyze the resulting text with the natural language processing library spaCy. Running OCR on a large dataset is very computationally expensive, so using Ray for distributed processing can really speed up the processing. Ray Datasets makes it easy to compose the different steps of the pipeline, namely the OCR and the natural language processing.\n",
+    "\n",
+    "To make it more interesting, we will run the analysis on the [LightShot](https://www.kaggle.com/datasets/datasnaek/lightshot) dataset. It is a large publicly available OCR dataset with a wide variety of different documents, all of them screen shots of various forms. It is easy to replace that dataset with your own data and adapt the example to your own use cases!\n",
     "\n",
     "## Overview\n",
     "\n",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3510c04",
+   "id": "f0183af2",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -73,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "52d502d7",
+   "id": "6a6bfa1f",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73e8dfb",
+   "id": "07ab8268",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -121,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e8a1fad3",
+   "id": "39e14f3d",
    "metadata": {
     "tags": [
      "remove-output"
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d602a9ba",
+   "id": "7a4949cc",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -162,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c8390bd0",
+   "id": "be088d96",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d888a77c",
+   "id": "fb29ab72",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -204,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "087023b9",
+   "id": "68545314",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dae86170",
+   "id": "7e1cabfc",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -224,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "69754a62",
+   "id": "af80ea50",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac325522",
+   "id": "ed98730a",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -266,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6448eae0",
+   "id": "f02a3007",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56e94e9e",
+   "id": "0f819f8a",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -323,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a537a59d",
+   "id": "39425d13",
    "metadata": {
     "scrolled": true
    },
@@ -361,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e309c03e",
+   "id": "908f6a86",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c7c12c4",
+   "id": "22679879",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -402,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4a6d4f37",
+   "id": "a064c5c8",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d37e37",
+   "id": "c6168439",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
