--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -262,7 +262,7 @@
    "source": [
     "It gives both the language and a confidence score for that language.\n",
     "\n",
-    "In order to run the code on the dataset, we have to use Ray Dataset's built in support for actors since the `nlp` object is not serializable and we want to avoid having to recreate it for each individual sentence:"
+    "In order to run the code on the dataset, we should use Ray Datasets' built in support for actors since the `nlp` object is not serializable and we want to avoid having to recreate it for each individual sentence:"
    ]
   },
   {
