--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7190dbb3",
+   "id": "009084d7",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,10 +22,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90cae65b",
+   "id": "78f185e0",
    "metadata": {},
    "source": [
-    "# Scaling up OCR using Ray Datasets\n",
+    "# Scaling OCR using Ray Datasets\n",
     "\n",
     "In this example, we will show you how to run optical character recognition (OCR) on a set of documents and analyze the resulting text with the natural language processing library [spaCy](https://spacy.io/). Running OCR on a large dataset is very computationally expensive, so using Ray for distributed processing can really speed up the processing. Ray Datasets makes it easy to compose the different steps of the pipeline, namely the OCR and the natural language processing.\n",
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0183af2",
+   "id": "14b5fc33",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6a6bfa1f",
+   "id": "360ee311",
    "metadata": {
     "scrolled": true
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07ab8268",
+   "id": "7148ed27",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "39e14f3d",
+   "id": "4ac63aaa",
    "metadata": {
     "tags": [
      "remove-output"
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a4949cc",
+   "id": "db627bd4",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "be088d96",
+   "id": "6082b936",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb29ab72",
+   "id": "8fb538dd",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68545314",
+   "id": "d8ff6d32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e1cabfc",
+   "id": "47137516",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "af80ea50",
+   "id": "d96cc002",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed98730a",
+   "id": "fdeee30b",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f02a3007",
+   "id": "9e60623f",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f819f8a",
+   "id": "282fb66a",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "39425d13",
+   "id": "70778f40",
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "908f6a86",
+   "id": "ffffc146",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22679879",
+   "id": "524a2171",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a064c5c8",
+   "id": "476df841",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6168439",
+   "id": "3b62d8d0",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
