--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "009084d7",
+   "id": "242b5b0a",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78f185e0",
+   "id": "8940eded",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -36,7 +36,7 @@
     "This tutorial will cover:\n",
     " - Creating a Ray Dataset that represents the images in the dataset\n",
     " - Running the computationally expensive OCR process on each image in the dataset in parallel\n",
-    " - Filtering out images that actually contain text\n",
+    " - Filtering the dataset by keeping only images that contain text\n",
     " - Performing various NLP operations on the text\n",
     "\n",
     "## Walkthrough\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14b5fc33",
+   "id": "5b6e6b09",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "360ee311",
+   "id": "9fea9929",
    "metadata": {
     "scrolled": true
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7148ed27",
+   "id": "2c2bb5da",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4ac63aaa",
+   "id": "31bab2af",
    "metadata": {
     "tags": [
      "remove-output"
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db627bd4",
+   "id": "4d9301b8",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6082b936",
+   "id": "c2b3d356",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fb538dd",
+   "id": "6a43b2ca",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8ff6d32",
+   "id": "9cc500a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47137516",
+   "id": "a1c5232e",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d96cc002",
+   "id": "3c31efc1",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdeee30b",
+   "id": "57b46691",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9e60623f",
+   "id": "c031f925",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "282fb66a",
+   "id": "ed9de372",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "70778f40",
+   "id": "78e7e8ac",
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffffc146",
+   "id": "725c077c",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "524a2171",
+   "id": "8d36b9f5",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "476df841",
+   "id": "dd414f3a",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b62d8d0",
+   "id": "d17f3497",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
