--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -670,7 +670,7 @@
    "source": [
     "## 4d: Define logic for Deploying and Querying our model\n",
     "\n",
-    "In addition to batch inference, we also want to deploy our model so that we can submit live queries to it for online inference. We use Ray Serve's `PredictorDeployment` utility to deploy our trained model. \n",
+    "In addition to batch inference, we also want to deploy our model so that we can submit live queries to it for online inference. We use Ray Serve's `ModelWrapperDeployment` utility to deploy our trained model. \n",
     "\n",
     "Once we deploy the model, we can send HTTP requests to our deployment."
    ]
@@ -701,7 +701,7 @@
     "      df = pd.DataFrame({\"image\": [arr]})\n",
     "      return df\n",
     "\n",
-    "  deployment = PredictorDeployment.options(name=\"mnist_model\", route_prefix=\"/mnist_predict\", version=f\"v{task_idx}\", num_replicas=2)\n",
+    "  deployment = ModelWrapperDeployment.options(name=\"mnist_model\", route_prefix=\"/mnist_predict\", version=f\"v{task_idx}\", num_replicas=2)\n",
     "  deployment.deploy(batching_params=False, http_adapter=json_to_pandas, predictor_cls=TorchPredictor, checkpoint=latest_checkpoint, model=SimpleMLP(num_classes=10))\n",
     "  return deployment.url\n",
     "\n",
@@ -1239,7 +1239,7 @@
     "from ray.train.torch import TorchPredictor\n",
     "from ray.air import Checkpoint\n",
     "from ray import serve\n",
-    "from ray.serve import PredictorDeployment\n",
+    "from ray.serve.model_wrappers import ModelWrapperDeployment\n",
     "from ray.serve.http_adapters import json_to_ndarray\n",
     "\n",
     "# The number of tasks (i.e. datasets in our stream) that we want to use for this example.\n",
